<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <TextView
        android:id="@+id/greetUserTv"
        android:layout_width="283dp"
        android:layout_height="37dp"
        android:layout_marginTop="47dp"
        android:text="@string/Hi"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/studentIdTv"
        android:layout_width="283dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:text="@string/select_option"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetUserTv" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="292dp"
        android:layout_height="233dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentIdTv">

        <RadioButton
            android:id="@+id/new_recordRBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:checked="true"
            android:text="@string/new_record"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/prev_recordRBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/previous_record"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/logoutRBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/Logout"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="272dp"
        android:layout_height="63dp"
        android:layout_marginTop="84dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>